@@ -3,6 +3,8 @@ package dev.getelements.elements.sdk.spi;
 import dev.getelements.elements.sdk.*;
 import dev.getelements.elements.sdk.exception.SdkElementNotFoundException;
 import dev.getelements.elements.sdk.exception.SdkException;
+import dev.getelements.elements.sdk.record.ElementManifestRecord;
+import dev.getelements.elements.sdk.record.ElementPathRecord;
 import dev.getelements.elements.sdk.util.PropertiesAttributes;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -15,14 +17,11 @@ import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.nio.file.*;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Properties;
-import java.util.ServiceLoader;
+import java.util.*;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Stream;
 
 import static java.nio.file.Files.*;
-import static java.util.stream.Collectors.joining;
 
 public class DirectoryElementPathLoader implements ElementPathLoader {
 
@@ -51,7 +50,17 @@ public class DirectoryElementPathLoader implements ElementPathLoader {
 
     private static URL toUrl(final Path path) {
         try {
-            return path.toUri().toURL();
+
+            final var url = path.toUri().toURL();
+            final var urlString = url.toString();
+
+            if (isRegularFile(path) || isDirectory(path) && urlString.endsWith("/")) {
+                return url;
+            }
+
+            final var directoryUrlString = "%s/".formatted(urlString);
+            return new URL(directoryUrlString);
+
         } catch (MalformedURLException ex) {
             throw new SdkException(ex);
         }
@@ -63,6 +72,10 @@ public class DirectoryElementPathLoader implements ElementPathLoader {
 
     private static boolean isApiDirectory(final Path path) {
         return isDirectory(path) && API_DIR.equals(path.getFileName().toString());
+    }
+
+    private static boolean isSpiDirectory(final Path path) {
+        return isDirectory(path) && SPI_DIR.equals(path.getFileName().toString());
     }
 
     private static boolean isLibDirectory(final Path path) {
@@ -78,201 +91,552 @@ public class DirectoryElementPathLoader implements ElementPathLoader {
     }
 
     @Override
-    public Stream<Element> load(
-            final MutableElementRegistry registry,
+    public Attributes readManifest(final Path path) {
+
+        final var manifestPath = path.resolve(MANIFEST_PROPERTIES_FILE);
+
+        if (!isRegularFile(manifestPath)) {
+            return Attributes.emptyAttributes();
+        }
+
+        final var properties = new Properties();
+
+        try (final var is = newInputStream(manifestPath)) {
+            properties.load(is);
+        } catch (IOException ex) {
+            logger.warn("Failed to read manifest at {}: {}", manifestPath, ex.getMessage());
+            return Attributes.emptyAttributes();
+        }
+
+        return PropertiesAttributes.wrap(properties);
+
+    }
+
+    private Attributes readAttributes(final Path path) {
+
+        final var attributesPath = path.resolve(ATTRIBUTES_PROPERTIES_FILE);
+
+        if (!isRegularFile(attributesPath)) {
+            return Attributes.emptyAttributes();
+        }
+
+        final var properties = new Properties();
+
+        try (final var is = newInputStream(attributesPath)) {
+            properties.load(is);
+        } catch (IOException ex) {
+            logger.warn("Failed to read attributes at {}: {}", attributesPath, ex.getMessage());
+            return Attributes.emptyAttributes();
+        }
+
+        return PropertiesAttributes.wrap(properties);
+
+    }
+
+    @Override
+    public ElementPathRecord readElement(final Path path) {
+
+        final var attributes = readAttributes(path);
+        final var manifest = ElementManifestRecord.from(readManifest(path));
+
+        final var api = collectDirEntries(path.resolve(API_DIR));
+        final var spi = collectDirEntries(path.resolve(SPI_DIR));
+        final var lib = collectDirEntries(path.resolve(LIB_DIR));
+        final var classpath = collectDirEntriesRecursive(path.resolve(CLASSPATH_DIR));
+
+        return new ElementPathRecord(path, api, spi, lib, classpath, attributes, manifest);
+
+    }
+
+    private List<Path> collectDirEntries(final Path dir) {
+
+        if (!isDirectory(dir)) {
+            return List.of();
+        }
+
+        final var entries = new ArrayList<Path>();
+
+        try (final var ds = newDirectoryStream(dir)) {
+            for (final var entry : ds) {
+                entries.add(entry);
+            }
+        } catch (IOException ex) {
+            throw new SdkException(ex);
+        }
+
+        return List.copyOf(entries);
+
+    }
+
+    private List<Path> collectDirEntriesRecursive(final Path dir) {
+
+        if (!isDirectory(dir)) {
+            return List.of();
+        }
+
+        try (final var walk = Files.walk(dir)) {
+            return walk
+                    .filter(p -> !p.equals(dir))
+                    .toList();
+        } catch (IOException ex) {
+            throw new SdkException(ex);
+        }
+
+    }
+
+    @Override
+    public Stream<ElementPathRecord> readElementPaths(final Path path) {
+
+        if (!isDirectory(path)) {
+            return Stream.empty();
+        }
+
+        final var records = new ArrayList<ElementPathRecord>();
+
+        try (final var ds = newDirectoryStream(path)) {
+            for (final var subpath : ds) {
+                if (isDirectory(subpath) && !isApiDirectory(subpath) && !isPathInHiddenHierarchy(subpath)) {
+                    records.add(readElement(subpath));
+                }
+            }
+        } catch (IOException ex) {
+            throw new SdkException(ex);
+        }
+
+        return records.stream();
+
+    }
+
+    @Override
+    public URLClassLoader buildApiClassLoader(final ClassLoader parent, final Collection<Path> paths) {
+        return buildJarClassLoader(parent, paths, this::collectApiJars, "API");
+    }
+
+    @Override
+    public Stream<Element> load(final LoadConfiguration config) {
+
+        final var elements = new ArrayList<Element>();
+        final var apiClassLoader = buildApiClassLoader(config.parent(), config.paths());
+
+        try {
+
+            // Build the list of all Elements we're trying to load
+            for (final var path : config.paths()) {
+                final var fromPath = loadElementsFromPath(path, apiClassLoader, config).toList();
+                elements.addAll(fromPath);
+            }
+
+            // Attach close handlers to all elements for reference counting. This ensures that any FileSystems
+            // referenced by the underlying API Classpath are closed when all Elements no longer need them.
+            // These are likely open file descriptors to the backing ELM files.
+
+            if (!elements.isEmpty()) {
+
+                final var counter = new AtomicInteger(elements.size());
+
+                elements.forEach(element -> element.onClose(el -> {
+                    if (counter.decrementAndGet() == 0) {
+                        try {
+                            apiClassLoader.close();
+                        } catch (IOException ex) {
+                            logger.error("Caught exception closing API Classloader.", ex);
+                            throw new SdkException("Error closing API classloader.", ex);
+                        }
+                    }
+                }));
+
+            } else {
+                // No elements loaded, close the API classloader immediately
+                try {
+                    apiClassLoader.close();
+                } catch (IOException ex) {
+                    throw new SdkException(ex);
+                }
+            }
+
+        } catch (Exception ex) {
+
+            logger.error("Caught exception loading Element.", ex);
+
+            for (var element : elements) {
+                try {
+                    element.close();
+                } catch (Exception e) {
+                    logger.error("Caught exception closing previously loaded Element.", e);
+                    ex.addSuppressed(e);
+                }
+            }
+
+            try {
+                apiClassLoader.close();
+            } catch (IOException e) {
+                logger.error("Caught exception closing api classloader.", e);
+                ex.addSuppressed(e);
+            }
+
+            throw ex;
+
+        }
+
+        return elements.stream();
+
+    }
+
+    private URLClassLoader buildJarClassLoader(
+            final ClassLoader parent,
+            final Collection<Path> paths,
+            final java.util.function.BiConsumer<Path, List<URL>> collector,
+            final String type) {
+
+        final var classpath = new ArrayList<URL>();
+        final var fileSystems = new ArrayList<FileSystem>();
+
+        for (final var path : paths) {
+            try {
+                // Try to open as a FileSystem (for ELM/zip files)
+                final var fs = FileSystems.newFileSystem(path);
+                fileSystems.add(fs); // Keep it open
+                final var root = fs.getRootDirectories().iterator().next();
+                collector.accept(root, classpath);
+            } catch (ProviderNotFoundException ex) {
+                // Not a zip/ELM file, try as directory
+                if (Files.isDirectory(path)) {
+                    collector.accept(path, classpath);
+                } else {
+                    logger.debug("{} is not a directory or ELM file. Skipping {} scan.", path, type);
+                }
+            } catch (final NoSuchFileException ex) {
+                logger.debug("{} does not exist. Skipping {} scan.", path, type);
+            } catch (final IOException ex) {
+                // Close any FileSystems we've opened so far
+                fileSystems.forEach(fs -> {
+                    try {
+                        fs.close();
+                    } catch (IOException e) {
+                        logger.error("Error closing FileSystem during cleanup", e);
+                    }
+                });
+                throw new SdkException(ex);
+            }
+        }
+
+
+        return new ElementApiClassLoader(classpath.toArray(URL[]::new), fileSystems, parent);
+
+    }
+
+    /**
+     * Collects API jars from path/api/ subdirectory.
+     * Scans immediate children of path for api/ subdirectory.
+     */
+    private void collectApiJars(final Path path, final List<URL> apiClasspath) {
+
+        if (!isDirectory(path) || isPathInHiddenHierarchy(path)) {
+            return;
+        }
+
+        try (final var ds = newDirectoryStream(path)) {
+
+            // First pass: collect JARs from top-level "api" directory if it exists
+            final var topLevelApi = path.resolve(API_DIR);
+            if (isApiDirectory(topLevelApi)) {
+                logger.info("Found top-level API directory: {}", topLevelApi);
+                try (final var jarStream = newDirectoryStream(topLevelApi)) {
+                    for (final var jarPath : jarStream) {
+                        if (isJarFile(jarPath)) {
+
+                            apiClasspath.add(jarPath.getFileSystem() == FileSystems.getDefault()
+                                    ? toUrl(jarPath)
+                                    : UrlUtils.forPath(jarPath)
+                            );
+
+                            logger.debug("Added top-level API jar: {}", jarPath);
+
+                        }
+                    }
+                }
+            }
+
+            // Second pass: for each subdirectory that isn't "api", check if it contains an "api" subdirectory
+            for (final var subPath : ds) {
+                if (isDirectory(subPath) && !isApiDirectory(subPath)) {
+                    final var elementApi = subPath.resolve(API_DIR);
+                    if (isApiDirectory(elementApi)) {
+                        logger.info("Found element API directory: {}", elementApi);
+                        try (final var jarStream = newDirectoryStream(elementApi)) {
+                            for (final var jarPath : jarStream) {
+                                if (isJarFile(jarPath)) {
+
+                                    apiClasspath.add(jarPath.getFileSystem() == FileSystems.getDefault()
+                                            ? toUrl(jarPath)
+                                            : UrlUtils.forPath(jarPath)
+                                    );
+
+                                    logger.debug("Added element API jar: {}", jarPath);
+
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+
+        } catch (IOException e) {
+            throw new SdkException(e);
+        }
+    }
+
+    @Override
+    public Optional<ClassLoader> findSpiClassLoader(final ClassLoader parent, final Path path) {
+
+        // If somebody passed the SPI directory directly and we try there.
+        if (isSpiDirectory(path)) {
+            return tryBuildSpiClassLoader(parent, path);
+        }
+
+        // Otherwise, we check if they passed an element root and we try there.
+        final var resolved = path.resolve(SPI_DIR);
+
+        if (isSpiDirectory(resolved)) {
+            return tryBuildSpiClassLoader(parent, resolved);
+        }
+
+        // This means the path isn't valid so we presume no SPI is specified
+        return Optional.empty();
+
+    }
+
+    public Optional<ClassLoader> tryBuildSpiClassLoader(final ClassLoader parent, final Path path) {
+
+        final var jars = new ArrayList<URL>();
+
+        try (final var directory = newDirectoryStream(path)) {
+            for (var subPath : directory) {
+                if (isJarFile(subPath)) {
+                    jars.add(toUrl(subPath));
+                }
+            }
+        } catch (IOException ex) {
+            throw new SdkException(ex);
+        }
+
+        if (jars.isEmpty()) {
+            logger.warn("SPI path {} contains no artifacts.", path);
+        }
+
+        return jars.isEmpty()
+                ? Optional.empty()
+                : Optional.of(new URLClassLoader(
+                        "SPI=%s".formatted(path),
+                        jars.toArray(URL[]::new), parent)
+                );
+
+    }
+
+    /**
+     * Internal method that loads Elements with custom attributes provider.
+     */
+    private Stream<Element> loadElementsFromPath(
             final Path path,
-            final ClassLoader baseClassLoader) {
-        try (final var fs = FileSystems.newFileSystem(path)) {
+            final ClassLoader apiClassLoader,
+            final LoadConfiguration config) {
+        try {
+
+            // Try to open as a FileSystem (for ELM/zip files)
+            final var fs = FileSystems.newFileSystem(path);
             final var root = fs.getPath("/");
-            return doLoad(registry, root, baseClassLoader);
+
+            final var elements = doLoadElementsFromPath(root, apiClassLoader, config).toList();
+
+            if (elements.isEmpty()) {
+                // No elements loaded, close the FileSystem immediately
+                try {
+                    fs.close();
+                } catch (IOException e) {
+                    logger.error("Error closing FileSystem for {}", path, e);
+                }
+                return Stream.empty();
+            }
+
+            // Attach close handlers to all elements using reference counting
+            final var counter = new AtomicInteger(elements.size());
+
+            elements.forEach(element -> element.onClose(el -> {
+                if (counter.decrementAndGet() == 0) {
+                    try {
+                        fs.close();
+                    } catch (IOException e) {
+                        logger.error("Error closing FileSystem for {}", path, e);
+                    }
+                }
+            }));
+
+            return elements.stream();
+
         } catch (ProviderNotFoundException ex) {
+            // Not a zip/ELM file, try as directory
             if (Files.isDirectory(path)) {
-                return doLoad(registry, path, baseClassLoader);
+                return doLoadElementsFromPath(path, apiClassLoader, config);
             } else {
                 logger.warn("{} not a directory. Skipping.", path);
                 return Stream.empty();
             }
-        } catch (final NoSuchFileException ex) {
-            logger.warn("{} does not exist. Skipping.", path);
+        } catch (NoSuchFileException ex) {
+            logger.warn("{} not found. Skipping.", path);
             return Stream.empty();
-        } catch (final IOException ex) {
+        } catch (FileSystemAlreadyExistsException ex) {
+            logger.warn("FileSystem already exists for {}. Using existing.", path);
+            final var fs = FileSystems.getFileSystem(path.toUri());
+            return doLoadElementsFromPath(fs.getPath("/"), apiClassLoader, config);
+        } catch (IOException ex) {
             throw new SdkException(ex);
         }
     }
 
-    private Stream<Element> doLoad(
-            final MutableElementRegistry registry,
+
+    /**
+     * Internal method with attributes provider support.
+     */
+    private Stream<Element> doLoadElementsFromPath(
             final Path path,
-            final ClassLoader baseClassLoader) {
+            final ClassLoader apiClassLoader,
+            final LoadConfiguration config) {
 
-        final var sharedClassLoader = SharedClasspathRecord
-                .from(path)
-                .build()
-                .newClassLoader();
-
-        return doLoadWithSharedClasspath(registry, path, baseClassLoader, sharedClassLoader);
-
-    }
-
-    private Stream<Element> doLoadWithSharedClasspath(
-            final MutableElementRegistry registry,
-            final Path path,
-            final ClassLoader baseClassLoader,
-            final ClassLoader sharedClassloader) {
-
-        Stream<Element> result = Stream.empty();
+        final var elements = new ArrayList<Element>();
 
         try (final var directory = newDirectoryStream(path)) {
-            final var record = ElementPathRecord.from(registry, baseClassLoader, sharedClassloader, directory);
-            final var elements = record.load();
+
+            for (final var subpath : directory) {
+                if (isDirectory(subpath) && !isApiDirectory(subpath)) {
+                    try (final var elementDirectory = newDirectoryStream(subpath)) {
+
+                        // If the Element provides its own SPI, we will include it. This is not required and
+                        // in that case we will assume it's on the parent provided and use the parent instead.
+
+                        final var spiClassLoader = findSpiClassLoader(apiClassLoader, subpath)
+                                .orElse(apiClassLoader);
+
+                        final var elementClassLoader = config
+                                .spiLoader()
+                                .apply(spiClassLoader, subpath);
+
+                        // Construct the record with everything needed to make the new Element
+
+                        final var record = ElementPathLoaderRecord.from(
+                                config.registry(),
+                                elementClassLoader,
+                                config.baseClassLoader(),
+                                subpath,
+                                elementDirectory,
+                                config.attributesProvider()
+                        );
+
+                        // Check that the Element is valid and can be loaded. If conditions are met, then
+                        // load the Element
+
+                        if (record.isValidElement()) {
+                            try {
+                                final var element = record.loadElement();
+                                elements.add(element);
+                            } catch (final SdkException ex) {
+                                logger.warn("Caught exception loading eleemnt. Deferring to handler.", ex);
+                                config.sdkExceptionHandler().accept(ex);
+                            }
+                        }
+
+                    }
+                }
+            }
+
             return elements.stream();
+
         } catch (IOException ex) {
+
+            elements.forEach(el -> {
+                try {
+                    el.close();
+                } catch (Exception suppressed) {
+                    ex.addSuppressed(suppressed);
+                }
+            });
+
             throw new SdkException(ex);
+
         } catch (Exception ex) {
-            result.forEach(Element::close);
+
+            elements.forEach(el -> {
+                try {
+                    el.close();
+                } catch (Exception suppressed) {
+                    ex.addSuppressed(suppressed);
+                }
+            });
+
             throw ex;
         }
 
     }
 
-    private record SharedClasspathRecord(
-            Path path,
-            List<URL> classpath
-    ) {
+    /**
+     * Delegates to doLoadWithAttributes with a pass-through attributes provider.
+     */
 
-        public static SharedClasspathRecord from(final Path path) {
-            return new SharedClasspathRecord(path, new ArrayList<>());
-        }
-
-        public SharedClasspathRecord build() {
-            build(path());
-            return this;
-        }
-
-        public ClassLoader newClassLoader() {
-            return new URLClassLoader(classpath.toArray(URL[]::new), null);
-        }
-
-        private void build(final Path path) {
-            if (isLibDirectory(path)) {
-                logger.trace("Not including library directory {} in shared classpath.", path);
-            } else if (isClasspathDirectory(path)) {
-                logger.trace("Not including classpath directory {} in shared classpath.", path);
-            } else if (isAttributesFiles(path)) {
-                logger.trace("Skipping attributes file {} while evaluating shared classpath.", path);
-            } else if (isPathInHiddenHierarchy(path)) {
-                logger.debug("Skipping hidden path {} while evaluating shared classpath.", path);
-            } else if (isApiDirectory(path)) {
-
-                logger.info("Including API directory {} in shared classpath.", path);
-
-                try (final var ds = newDirectoryStream(path)) {
-                    for (final var subPath : ds) {
-                        if (isJarFile(subPath)) {
-                            classpath.add(toUrl(subPath));
-                            logger.debug("Added {} to shared classpath.", subPath);
-                        }
-                    }
-                } catch (IOException e) {
-                    throw new SdkException(e);
-                }
-
-            } else if (isDirectory(path)) {
-                try (final var ds = newDirectoryStream(path)) {
-                    for (final var subPath : ds) {
-                        build(subPath);
-                    }
-                } catch (IOException e) {
-                    throw new SdkException(e);
-                }
-            } else {
-                logger.info("Skipping {} while evaluating shared classpath. Not a directory.", path);
-            }
-        }
-
-    }
-
-    private record ElementPathRecord(
+    private record ElementPathLoaderRecord(
+            Path elementPath,
             Path libs,
             Path classpath,
             Path attributesFile,
-            List<Path> directories,
+            ClassLoader elementParent,
             ClassLoader baseClassLoader,
-            ClassLoader sharedClassLoader,
             MutableElementRegistry registry,
-            Element parent) {
+            AttributesLoader attributesProvider) {
 
-        public static ElementPathRecord from(final MutableElementRegistry registry,
-                                             final ClassLoader baseClassLoader,
-                                             final ClassLoader sharedClassLoader,
-                                             final DirectoryStream<Path> directory) {
-
-            Path libs, classpath, attributesFile;
-            libs = classpath = attributesFile = null;
-
-            final var directories = new ArrayList<Path>();
-
-            for (var subpath : directory) {
-                if (isLibDirectory(subpath)) {
-                    libs = subpath;
-                } else if (isClasspathDirectory(subpath)) {
-                    classpath = subpath;
-                } else if (isAttributesFiles(subpath)) {
-                    attributesFile = subpath;
-                } else if (isDirectory(subpath)) {
-                    directories.add(subpath);
-                } else if (isPathInHiddenHierarchy(subpath)) {
-                    logger.debug("Skipping hidden path: {}.", subpath);
-                } else {
-                    logger.warn("Unexpected path in Element definition: {}, ignoring.", subpath);
-                }
-            }
-
-            return new ElementPathRecord(
-                    libs,
-                    classpath,
-                    attributesFile,
-                    List.copyOf(directories),
-                    baseClassLoader,
-                    sharedClassLoader,
-                    registry,
-                    null
-            );
-
+        public ElementPathLoaderRecord {
+            elementPath = elementPath == null ? null : elementPath.toAbsolutePath();
+            libs = libs == null ? null : libs.toAbsolutePath();
+            classpath = classpath == null ? null : classpath.toAbsolutePath();
+            attributesFile = attributesFile == null ? null : attributesFile.toAbsolutePath();
         }
 
-        public ElementPathRecord descendant(final Element parent, final DirectoryStream<Path> directory) {
+        public static ElementPathLoaderRecord from(final MutableElementRegistry registry,
+                                                   final ClassLoader elementParent,
+                                                   final ClassLoader baseClassLoader,
+                                                   final Path elementPath,
+                                                   final DirectoryStream<Path> directory,
+                                                   final AttributesLoader attributesProvider) {
 
             Path libs, classpath, attributesFile;
             libs = classpath = attributesFile = null;
 
-            final var directories = new ArrayList<Path>();
-
             for (var subpath : directory) {
-                if (isLibDirectory(subpath)) {
+                if (isApiDirectory(subpath)) {
+                    logger.debug("Skipping API directory {} while collecting path elements.", subpath);
+                } else if (isSpiDirectory(subpath)) {
+                    logger.debug("Element has SPI directory {}. Will attempt to enable SPI for this Element.", subpath);
+                } else if (isLibDirectory(subpath)) {
                     libs = subpath;
                 } else if (isClasspathDirectory(subpath)) {
                     classpath = subpath;
                 } else if (isAttributesFiles(subpath)) {
                     attributesFile = subpath;
-                } else if (isDirectory(subpath)) {
-                    directories.add(subpath);
                 } else if (isPathInHiddenHierarchy(subpath)) {
                     logger.debug("Skipping hidden path: {}.", subpath);
+                } else if (!isDirectory(subpath)) {
+                    logger.warn("Unexpected file in Element definition: {}, ignoring.", subpath);
                 } else {
-                    logger.warn("Unexpected path in Element definition: {}, ignoring.", subpath);
+                    logger.debug("Ignoring element path: {}.", subpath);
                 }
             }
 
-            return new ElementPathRecord(
+            return new ElementPathLoaderRecord(
+                    elementPath,
                     libs,
                     classpath,
                     attributesFile,
-                    directories,
-                    baseClassLoader(),
-                    sharedClassLoader(),
-                    registry(),
-                    parent
+                    elementParent,
+                    baseClassLoader,
+                    registry,
+                    attributesProvider
             );
 
         }
@@ -283,7 +647,10 @@ public class DirectoryElementPathLoader implements ElementPathLoader {
                         ? Stream.empty()
                         : list(libs())
                             .filter(DirectoryElementPathLoader::isJarFile)
-                            .map(DirectoryElementPathLoader::toUrl);
+                            .map(libJar -> libJar.getFileSystem() == FileSystems.getDefault()
+                                    ? toUrl(libJar)
+                                    : UrlUtils.forPath(libJar)
+                            );
             } catch (IOException ex) {
                 throw new SdkException(ex);
             }
@@ -295,7 +662,7 @@ public class DirectoryElementPathLoader implements ElementPathLoader {
                     : Stream.of(toUrl(classpath()));
         }
 
-        public boolean isValidClasspath() {
+        public boolean isValidElement() {
             return classpath() != null || libs() != null;
         }
 
@@ -305,96 +672,62 @@ public class DirectoryElementPathLoader implements ElementPathLoader {
 
         public Attributes loadAttributes() {
 
+            // First, load base attributes from properties file (if it exists)
+            final Attributes baseAttributes;
             if (attributesFile() == null) {
-                return Attributes.emptyAttributes();
+                baseAttributes = Attributes.emptyAttributes();
+            } else {
+                try (
+                        var fis = new FileInputStream(attributesFile().toFile());
+                        var bis = new BufferedInputStream(fis)
+                ) {
+                    final var properties = new Properties();
+                    properties.load(bis);
+                    baseAttributes = PropertiesAttributes.wrap(properties);
+                } catch (IOException ex) {
+                    throw new SdkException(ex);
+                }
             }
 
-            try (
-                    var fis = new FileInputStream(attributesFile().toFile());
-                    var bis = new BufferedInputStream(fis)
-            ) {
-                final var properties = new Properties();
-                properties.load(bis);
-                return PropertiesAttributes.wrap(properties);
-            } catch (IOException ex) {
-                throw new SdkException(ex);
-            }
+            // Apply the attributes provider to allow customization
+            return attributesProvider().apply(baseAttributes, elementPath());
 
         }
 
-        public List<Element> load() {
-
-            final var results = new ArrayList<Element>();
-
-            Element element = parent();
-
-            if (isValidClasspath()) {
-
-                logger.debug("Loading classpath: {}", directories());
-
-                try {
-                    final var elementLoader = getLoader();
-                    element = registry().register(elementLoader);
-                    results.add(element);
-                } catch (SdkElementNotFoundException ex) {
-                    logger.warn(
-                            "{} has valid classpath but no elements were found.",
-                            directories().stream().map(Path::toString).collect(joining(",")),
-                            ex);
-                }
-            } else {
-                logger.debug("Skipping load of elements from {}", directories());
-            }
-
-            for (var subDirectory : directories()) {
-                try (final var subDirectoryStream = newDirectoryStream(subDirectory)) {
-                    final var descendant = descendant(element, subDirectoryStream);
-                    results.addAll(descendant.load());
-                } catch (IOException ex) {
-                    throw new SdkException(ex);
-                } catch (Exception ex) {
-                    results.forEach(Element::close);
-                    throw ex;
-                }
-            }
-
-            return results;
-
+        public Element loadElement() {
+            logger.debug("Loading element from: {}", elementPath());
+            final var elementLoader = getLoader();
+            return registry().register(elementLoader);
         }
 
         private ElementLoader getLoader() {
 
-            final var urls = allClasspathUrls();
+            final var implUrls = allClasspathUrls();
             final var attributes = loadAttributes();
 
-            final var classLoaderName = String.format("%s={%s}",
+            // Build the classloader hierarchy: API -> SPI -> Implementation.
+            // Create implementation classloader with SPI as parent
+
+            final var classLoaderName = "%s[%s]".formatted(
                     ELEMENT_PATH_ENV,
-                    Stream
-                            .of(urls)
-                            .map(URL::toString)
-                            .collect(joining())
+                    elementPath()
             );
 
             return ServiceLoader
-                    .load(ElementLoaderFactory.class, baseClassLoader)
+                    .load(ElementLoaderFactory.class, baseClassLoader())
                     .stream()
                     .findFirst()
                     .orElseThrow(() -> new SdkException(
                             "No SPI for " + ElementLoaderFactory.class.getName() + " " +
-                            "found in " + baseClassLoader.getName()
+                            "found in framework classloader"
                     ))
                     .get()
                     .getIsolatedLoaderWithParent(
                             attributes,
-                            baseClassLoader,
-                            cl -> new URLClassLoader(classLoaderName, urls, cl),
-                            parent() == null
-                                    ? sharedClassLoader()
-                                    : parent().getElementRecord().classLoader(),
-                            edr -> registry
-                                    .stream()
-                                    .map(element -> element.getElementRecord().definition().name())
-                                    .noneMatch(name -> edr.name().equals(name))
+                            baseClassLoader(),
+                            cl -> new URLClassLoader(classLoaderName, implUrls, cl),
+                            elementParent(),
+                            el -> true
                     );
 
         }
